--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,6 @@
 /* src/styles/footer.css */
 .site-footer {
-  background-color: #003366;
+  background-color: #ccd6e0;
   color: #fff;
   text-align: center;
   padding: 1rem 2rem;
