--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -140,7 +140,7 @@
     left: 0;
     height: 100dvh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: #003366;
     z-index: 999;
   }
 
