--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -11,7 +11,7 @@
   z-index: 1000;
   transition: top 0.3s ease-in-out; /* smooth hide/show */
 }
-body {
+.main-content {
     padding-top:80px;
 }
 .navbar-header {
