--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,7 +12,7 @@
   transition: top 0.3s ease-in-out; /* smooth hide/show */
 }
 .main-content {
-    padding-top:80px;
+    padding-top: 3rem;
 }
 .navbar-header {
   display: flex;
