--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -299,7 +299,7 @@ body.menu-open {
 .nav-links.show {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 10px;
   right: 0;
   bottom: 0;
   height: 100dvh;
