--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -154,6 +154,7 @@
   .nav-links.show {
     visibility: visible;
     opacity: 1;
+    overflow-y: auto;
     pointer-events: auto;
     transform: translateY(0); /* Slides into view */
     transition: opacity 0.3s ease, transform 0.3s ease;
